[package]
name = "rust-ios-example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
